--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
-.idea/
 experiments/
-floyd_requirements.txt
-.floyd*
+*.jpg
+*.pkl
+
+.idea/MobileNet.iml
+.idea/inspectionProfiles/profiles_settings.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/vcs.xml
+.idea/workspace.xml
